[package]
name = "aoc16"
version = "0.1.0"
authors = ["Mark Jans <mark@markjans.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "a"
path = "src/bin/a.rs"

[[bin]]
name = "b"
path = "src/bin/b.rs"

[dependencies]
